tests/neg-custom-args/captures/cc-this2.check

-- Error: tests/neg-custom-args/captures/cc-this2/D_2.scala:2:6 --------------------------------------------------------
2 |class D extends C: // error
  |^
  |reference (scala.caps.cap : Any) is not included in allowed capture set {} of pure base class class C
3 |  this: D^ =>
